# leafspy_trademe

./: .gitignore  README.md  SPEC.md  analyze_leafs.ipynb  fetch_leafs.py  leaf_harvester.user.js  pyproject.toml  receiver.py
leafspy/: __init__.py  classify.py  parse.py  schema.py  scrape.py  summarize.py
